--- a/Passwort Generetor/scss/style.scss
+++ b/Passwort Generetor/scss/style.scss
@@ -8,7 +8,7 @@
 }
 
 body {
-    widows: 100%;
+    width: 100%;
     height: 100%;
     background-image:
         linear-gradient(to top, #209cff 100%, #68e0cf 200%);
@@ -112,9 +112,9 @@ $field-border-radius: 8px;
     position: absolute;
     top: -10px;
     left: 8px;
-    transform: translate(-50%);
+    transform: translateY(-50%);
     font-weight: 800;
-    color: rgba(255, 255, 255, 0.05);
+    color: rgba(255, 255, 255, 0.5);
     text-transform: uppercase;
     font-size: 0.65rem;
     pointer-events: none;
@@ -159,4 +159,166 @@ $field-border-radius: 8px;
     }
 }
 
-$range
+$range-handle-color: rgba(255, 255, 255) !default;
+$range-handle-color-hover: rgba(212, 212, 212) !default;
+$range-handle-size: 20px !default;
+$range-track-color: rgba(255, 255, 255, 0.314) !default;
+$range-track-height: 2px !default;
+$range-label-width: 60px !default;
+
+#slider {
+    -webkit-appearance: none;
+    width: calc(100% - (#{$range-label-width} - 10px));
+    height: $range-track-height;
+    border-radius: 5px;
+    background: $range-track-color;
+    outline: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+
+    // Range Handle
+    &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        width: $range-handle-size;
+        height: $range-handle-size;
+        border-radius: 50%;
+        background: $range-handle-color;
+        cursor: pointer;
+        transition: all 0.15ms ease-in-out;
+
+        &:hover {
+            background: $range-handle-color-hover;
+            transform: scale(1.2);
+        }
+
+    }
+
+    &::-moz-ramge-thumb {
+        width: $range-handle-size;
+        height: $range-handle-size;
+        border-radius: 50%;
+        background: $range-handle-color;
+        cursor: pointer;
+        transition: all 0.15ms ease-in-out;
+
+        &:hover {
+            background: $range-handle-color-hover;
+        }
+
+    }
+}
+
+.settings {
+    position: relative;
+    height: auto;
+    widows: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .setting {
+        position: relative;
+        width: 100%;
+        height: calc(#{$field-height} -10px);
+        background: $field-color;
+        border-radius: $field-border-radius;
+        display: flex;
+        align-items: center;
+        padding: 10px 25px;
+        color: #fff;
+        margin-bottom: 8px;
+
+
+        input {
+            opacity: 0;
+            position: absolute;
+
+            +label {
+                user-select: none;
+
+                &::before,
+                &::after {
+                    content: '';
+                    position: absolute;
+                    transition: 150ms cubic-bezier(0.24, 0, 0.5, 1);
+                    transform: translateY(-50%);
+                    top: 50%;
+                    right: 10px;
+                    cursor: pointer;
+                }
+
+                &::before {
+                    height: 30px;
+                    width: 50px;
+                    border-radius: 30px;
+                    background: rgba(214, 214, 214, 0.434);
+                }
+
+                &::after {
+                    height: 24px;
+                    width: 24px;
+                    border-radius: 60px;
+                    right: 32px;
+                    background: #fff;
+                }
+
+            }
+
+            &:checked {
+                &+label::before {
+                    background: #5d68e2;
+                    transition: all 150ms cubic-bezier(0, 0, 0, 0.1);
+                }
+
+                &+label::after {
+                    right: 14px;
+                }
+            }
+
+            &:focus {
+                +label::before {
+                    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.75);
+                }
+            }
+
+            &:disabled {
+                +label {
+
+                    &::before,
+                    &::after {
+                        cursor: pointer;
+                    }
+
+                    &::before {
+                        background: #4f4f6a;
+                    }
+
+                    &::after {
+                        background: #909090;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.btn.generate {
+    user-select: none;
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 10px 0;
+    border-radius: $field-border-radius;
+    color: #fff;
+    border: none;
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    letter-spacing: 1px;
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+
+    &:active {
+        transform: translateY(-3%);
+        box-shadow: 0 4px 8px rgba(255, 255, 255, 0.05);
+    }
+}
