--- a/Passwort Generetor/css/style.css
+++ b/Passwort Generetor/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  width: 100%;
+  widows: 100%;
   height: 100%;
   background-image: linear-gradient(to top, #209cff 100%, #68e0cf 200%);
   display: flex;
@@ -93,9 +93,9 @@ button {
   position: absolute;
   top: -10px;
   left: 8px;
-  transform: translateY(-50%);
+  transform: translate(-50%);
   font-weight: 800;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.05);
   text-transform: uppercase;
   font-size: 0.65rem;
   pointer-events: none;
@@ -171,15 +171,9 @@ button {
   background: rgb(212, 212, 212);
 }
 
-.settings {
+.setting {
   position: relative;
   height: auto;
-  widows: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.settings .setting {
-  position: relative;
   width: 100%;
   height: calc(60px -10px);
   background: rgba(255, 255, 255, 0.08);
@@ -190,14 +184,14 @@ button {
   color: #fff;
   margin-bottom: 8px;
 }
-.settings .setting input {
+.setting input {
   opacity: 0;
   position: absolute;
 }
-.settings .setting input + label {
+.setting input + label {
   user-select: none;
 }
-.settings .setting input + label::before, .settings .setting input + label::after {
+.setting input + label::before, .setting input + label::after {
   content: "";
   position: absolute;
   transition: 150ms cubic-bezier(0.24, 0, 0.5, 1);
@@ -206,57 +200,28 @@ button {
   right: 10px;
   cursor: pointer;
 }
-.settings .setting input + label::before {
+.setting input + label::before {
   height: 30px;
   width: 50px;
   border-radius: 30px;
   background: rgba(214, 214, 214, 0.434);
 }
-.settings .setting input + label::after {
+.setting input + label::after {
   height: 24px;
   width: 24px;
   border-radius: 60px;
   right: 32px;
   background: #fff;
 }
-.settings .setting input:checked + label::before {
+.setting input + label:checked + label::before {
   background: #5d68e2;
   transition: all 150ms cubic-bezier(0, 0, 0, 0.1);
 }
-.settings .setting input:checked + label::after {
+.setting input + label:checked + label::after {
   right: 14px;
 }
-.settings .setting input:focus + label::before {
+.setting input + label:focus + label::before {
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.75);
-}
-.settings .setting input:disabled + label::before, .settings .setting input:disabled + label::after {
-  cursor: pointer;
-}
-.settings .setting input:disabled + label::before {
-  background: #4f4f6a;
-}
-.settings .setting input:disabled + label::after {
-  background: #909090;
-}
-
-.btn.generate {
-  user-select: none;
-  position: relative;
-  width: 100%;
-  height: 50px;
-  margin: 10px 0;
-  border-radius: 8px;
-  color: #fff;
-  border: none;
-  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  letter-spacing: 1px;
-  font-weight: bold;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-.btn.generate:active {
-  transform: translateY(-3%);
-  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.05);
 }
 
 /*# sourceMappingURL=style.css.map */
