--- a/Passwort Generetor/css/style.css
+++ b/Passwort Generetor/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  widows: 100%;
+  width: 100%;
   height: 100%;
   background-image: linear-gradient(to top, #209cff 100%, #68e0cf 200%);
   display: flex;
@@ -93,9 +93,9 @@ button {
   position: absolute;
   top: -10px;
   left: 8px;
-  transform: translate(-50%);
+  transform: translateY(-50%);
   font-weight: 800;
-  color: rgba(255, 255, 255, 0.05);
+  color: rgba(255, 255, 255, 0.5);
   text-transform: uppercase;
   font-size: 0.65rem;
   pointer-events: none;
@@ -171,9 +171,15 @@ button {
   background: rgb(212, 212, 212);
 }
 
-.setting {
+.settings {
   position: relative;
   height: auto;
+  widows: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.settings .setting {
+  position: relative;
   width: 100%;
   height: calc(60px -10px);
   background: rgba(255, 255, 255, 0.08);
@@ -184,14 +190,14 @@ button {
   color: #fff;
   margin-bottom: 8px;
 }
-.setting input {
+.settings .setting input {
   opacity: 0;
   position: absolute;
 }
-.setting input + label {
+.settings .setting input + label {
   user-select: none;
 }
-.setting input + label::before, .setting input + label::after {
+.settings .setting input + label::before, .settings .setting input + label::after {
   content: "";
   position: absolute;
   transition: 150ms cubic-bezier(0.24, 0, 0.5, 1);
@@ -200,28 +206,57 @@ button {
   right: 10px;
   cursor: pointer;
 }
-.setting input + label::before {
+.settings .setting input + label::before {
   height: 30px;
   width: 50px;
   border-radius: 30px;
   background: rgba(214, 214, 214, 0.434);
 }
-.setting input + label::after {
+.settings .setting input + label::after {
   height: 24px;
   width: 24px;
   border-radius: 60px;
   right: 32px;
   background: #fff;
 }
-.setting input + label:checked + label::before {
+.settings .setting input:checked + label::before {
   background: #5d68e2;
   transition: all 150ms cubic-bezier(0, 0, 0, 0.1);
 }
-.setting input + label:checked + label::after {
+.settings .setting input:checked + label::after {
   right: 14px;
 }
-.setting input + label:focus + label::before {
+.settings .setting input:focus + label::before {
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.75);
+}
+.settings .setting input:disabled + label::before, .settings .setting input:disabled + label::after {
+  cursor: pointer;
+}
+.settings .setting input:disabled + label::before {
+  background: #4f4f6a;
+}
+.settings .setting input:disabled + label::after {
+  background: #909090;
+}
+
+.btn.generate {
+  user-select: none;
+  position: relative;
+  width: 100%;
+  height: 50px;
+  margin: 10px 0;
+  border-radius: 8px;
+  color: #fff;
+  border: none;
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  letter-spacing: 1px;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.btn.generate:active {
+  transform: translateY(-3%);
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.05);
 }
 
 /*# sourceMappingURL=style.css.map */
