--- a/PokeApi2/styles.css
+++ b/PokeApi2/styles.css
@@ -1,3 +1,14 @@
+body {
+    height: 100vh;
+    overflow-y: hidden;
+}
+
+footer {
+    display: flex;
+    justify-content: space-around;
+
+}
+
 form {
     width: 200px;
     margin: 20px auto;
@@ -85,8 +96,61 @@ input {
 }
 
 .poke-moves .Habilities {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(2, 2fr);
     grid-auto-rows: 40px;
     grid-gap: 13px;
+
+}
+
+.poke-list {
+
+    overflow-x: hidden;
+    height: 80vh;
+    position: relative;
+    border: 1px solid black;
+    border-radius: 4px;
+    font-family: 'Roboto Mono', monospace;
+    width: 420px;
+    padding: 20px;
+}
+
+.poke-list::-webkit-scrollbar {
+    width: 0;
+}
+
+.poke-list-card {
+    position: relative;
+    background-color: #FFF;
+}
+
+.poke-list-card::before {
+    content: '';
+    background: radial-gradient(black 33%, transparent 33%);
+    background-size: 3px 3px;
+    border-radius: 4px;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    z-index: -1;
+    
+}
+
+.poke {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    border: 1px solid black;
+    margin-top: 10px;
+    border-radius: 4px;
+    height: 67px;
+}
+
+.poke-table {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
