--- a/PokeApi2/styles.css
+++ b/PokeApi2/styles.css
@@ -1,4 +1,338 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+* {
+    margin: 0;
+}
+
 body {
+    font-family: 'Poppins', sans-serif;
+    height: 120vh;
+    background-image: url("img/poke-wallpaper2.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100vh;
+}
+
+body::-webkit-scrollbar {
+    width: 0;
+}
+
+header {
+    background-color: transparent;
+    width: 100vw;
+    height: 7vh;
+}
+
+header nav {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header nav img {
+    border-radius: 35px;
+    height: 90%;
+}
+
+header nav ul {
+    display: flex;
+    width: 40vw;
+}
+
+header nav ul li {
+    list-style: none;
+    padding-left: 5vw;
+}
+
+section {
+    display: flex;
+    width: 100vw;
+    height: 93vh;
+    background-color: transparent;
+}
+
+aside {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50vw;
+    z-index: 1;
+}
+
+aside:first-child+aside {
+    justify-content: center;
+}
+
+aside nav {
+    background-color: #FFF;
+}
+
+
+/* Search Pokemon */
+
+.search {
+    display: flex;
+    align-items: center;
+    position: relative;
+    justify-content: space-around;
+    width: 30vw;
+    height: 7vh;
+    margin-top: 5vh;
+    padding: 12px;
+    border-radius: 4px;
+    border: 1px solid black;
+    background-color: #FFF;
+}
+
+.search:hover {
+    padding: 9px;
+    border: 4px solid black;
+}
+
+.search img {
+    height: 100%;
+    width: 15%;
+}
+
+.search input {
+    width: 70%;
+    height: 80%;
+    margin: 0;
+    padding: 0;
+    border: 2px solid #000;
+    font-size: 25px;
+}
+
+
+
+
+/* Card Pokemon */
+
+
+.poke-card {
+    position: relative;
+    width: 45vw;
+    height: 60vh;
+    margin-top: 10vh;
+    border-radius: 4px;
+    color: #000;
+    text-align: center;
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+}
+
+.poke-card::before,
+.table-poke::before,
+.search::before {
+    content: '';
+    background: radial-gradient(black 33%, transparent 33%);
+    background-size: 3px 3px;
+    border-radius: 4px;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    z-index: -5;
+}
+
+.name {
+    padding: 4px;
+    font-size: 30px;
+    grid-column: 1 / 5;
+    grid-row: 1;
+}
+
+.img-container {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+}
+
+.poke-data-basic {
+    grid-column: 1 / 3;
+    grid-row: 3 / 3;
+}
+
+.poke-stats {
+    grid-column: 3 / 5;
+    grid-row: 2 / 3;
+}
+
+.poke-types {
+    grid-column: 5 / 3;
+    grid-row: 3 / 3;
+}
+
+.poke-moves {
+    grid-column: 1 / 5;
+    grid-row: 4 / 4;
+}
+
+.poke-stats div {
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
+    padding: 5px;
+    font-size: 18px;
+}
+
+.poke-types div {
+    padding: 5px;
+    margin: 5px;
+    border-radius: 4px;
+    border: 1px dashed black;
+}
+
+.poke-img {
+    width: 72%;
+    border-radius: 50%;
+}
+
+.poke-moves div div {
+    border: 1px solid black;
+    position: relative;
+    box-shadow: 9px 14px 13px -8px rgba(0, 0, 0, 0.11);
+    border-radius: 4px;
+}
+
+.poke-moves .Habilities {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    grid-auto-rows: 40px;
+    grid-gap: 13px;
+
+}
+
+
+
+/* Poke Table */
+
+.table-poke {
+    width: 40vw;
+    height: 60vh;
+    position: relative;
+}
+
+
+.poke-list {
+    overflow-x: hidden;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
+.poke-list::-webkit-scrollbar {
+    width: 0;
+}
+
+.poke {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    border: 1px solid black;
+    margin-top: 10px;
+    border-radius: 4px;
+    height: 67px;
+}
+
+
+
+
+
+
+
+
+
+footer {
+    background-color: #5e6065;
+    height: 20vh;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* body {
     height: 100vh;
     overflow-y: hidden;
 }
@@ -104,6 +438,11 @@ input {
 
 }
 
+
+
+
+
+
 .poke-list {
 
     overflow-x: hidden;
@@ -153,4 +492,4 @@ input {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
