--- a/PokeApi2/styles.css
+++ b/PokeApi2/styles.css
@@ -9,7 +9,7 @@ body {
     height: 120vh;
     background-image: url("img/poke-wallpaper2.jpg");
     background-repeat: no-repeat;
-    background-size: 100% 100vh;
+    background-size: 100% 147vh;
 }
 
 body::-webkit-scrollbar {
@@ -112,16 +112,19 @@ aside nav {
 
 .poke-card {
     position: relative;
-    width: 45vw;
-    height: 60vh;
+    width: 20vw;
+    height: 30vh;
+    padding: 2%;
     margin-top: 10vh;
     border-radius: 4px;
     color: #000;
     text-align: center;
+
     border: 1px solid black;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    display: block;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 8% 42% 14% 36%;
+    transition: 0.5s;
 }
 
 .poke-card::before,
@@ -140,54 +143,49 @@ aside nav {
 }
 
 .name {
-    padding: 4px;
-    font-size: 30px;
-    grid-column: 1 / 5;
+    grid-column: 1 / 3;
     grid-row: 1;
 }
 
-.img-container {
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
-}
+.img-container {}
 
 .poke-data-basic {
-    grid-column: 1 / 3;
-    grid-row: 3 / 3;
+    display: flex;
+    justify-content: space-evenly;
+    text-decoration: underline;
+    align-items: center;
 }
 
 .poke-stats {
-    grid-column: 3 / 5;
-    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
-.poke-types {
-    grid-column: 5 / 3;
-    grid-row: 3 / 3;
-}
+.poke-types {}
 
 .poke-moves {
-    grid-column: 1 / 5;
-    grid-row: 4 / 4;
+    grid-column: 1 / 3;
+    grid-row: 4;
 }
 
 .poke-stats div {
     display: flex;
     justify-content: space-between;
     align-content: space-between;
-    padding: 5px;
     font-size: 18px;
 }
 
 .poke-types div {
-    padding: 5px;
-    margin: 5px;
+    padding: 4px;
+    margin: 4px;
     border-radius: 4px;
     border: 1px dashed black;
 }
 
 .poke-img {
-    width: 72%;
+    width: 78%;
+    height: 95%;
     border-radius: 50%;
 }
 
@@ -201,10 +199,18 @@ aside nav {
 .poke-moves .Habilities {
     position: relative;
     display: grid;
+    height: 86%;
     grid-template-columns: repeat(2, 2fr);
-    grid-auto-rows: 40px;
-    grid-gap: 13px;
+    grid-auto-rows: 46%;
+    grid-gap: 6%;
+}
 
+.poke-moves .Habilities h2 {
+    color: #FFF;
+    font-size: 2em;
+    padding-top: 4%;
+    border: 1px solid black;
+    border-radius: 4px;
 }
 
 
@@ -240,6 +246,8 @@ aside nav {
     border-radius: 4px;
     height: 67px;
 }
+
+
 
 
 
