--- a/PokeApi2/styles.css
+++ b/PokeApi2/styles.css
@@ -112,37 +112,35 @@ aside nav {
 
 .poke-card {
     position: relative;
-    width: 20vw;
-    height: 30vh;
-    padding: 2%;
-    margin-top: 10vh;
+    min-width: 25vh;
+    min-height: 20vh;
+    padding:1rem;
+    margin-top: 4vh;
     border-radius: 4px;
     color: #000;
     text-align: center;
-
     border: 1px solid black;
     display: block;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 8% 42% 14% 36%;
-    transition: 0.5s;
+    grid-template-rows: 8% 42% 18% 32%;
 }
 
 .poke-card::before,
 .table-poke::before,
 .search::before {
     content: '';
-    background: radial-gradient(black 33%, transparent 33%);
-    background-size: 3px 3px;
-    border-radius: 4px;
+    background: black;
+    border-radius: 11px;
     height: 100%;
     width: 100%;
     position: absolute;
-    left: 10px;
-    top: 10px;
+    left: 12px;
+    top: 12px;
     z-index: -5;
 }
 
 .name {
+    font-size: 4vh;
     grid-column: 1 / 3;
     grid-row: 1;
 }
@@ -162,37 +160,45 @@ aside nav {
     justify-content: space-around;
 }
 
-.poke-types {}
-
 .poke-moves {
     grid-column: 1 / 3;
     grid-row: 4;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    grid-auto-rows: 46%;
+    grid-gap: 6%;
 }
+
+.poke-moves h2{
+    padding-top: 2vh;
+    color: #FFF;
+    border-radius: 10px;
+}
+
 
 .poke-stats div {
     display: flex;
     justify-content: space-between;
     align-content: space-between;
-    font-size: 18px;
+    font-size: 1vw;
 }
 
 .poke-types div {
+    margin-top: 1vh;
     padding: 4px;
-    margin: 4px;
     border-radius: 4px;
     border: 1px dashed black;
 }
 
 .poke-img {
-    width: 78%;
-    height: 95%;
+    width: 19vw;
+    height: 26vh;
     border-radius: 50%;
 }
 
 .poke-moves div div {
     border: 1px solid black;
-    position: relative;
-    box-shadow: 9px 14px 13px -8px rgba(0, 0, 0, 0.11);
     border-radius: 4px;
 }
 
@@ -206,9 +212,9 @@ aside nav {
 }
 
 .poke-moves .Habilities h2 {
+    padding: 1rem;
     color: #FFF;
-    font-size: 2em;
-    padding-top: 4%;
+    font-size: 2vw;
     border: 1px solid black;
     border-radius: 4px;
 }
