--- a/PokeApi2/styles.css
+++ b/PokeApi2/styles.css
@@ -18,7 +18,6 @@ body::-webkit-scrollbar {
 
 header {
     background-color: transparent;
-    width: 100vw;
     height: 7vh;
 }
 
@@ -35,33 +34,32 @@ header nav img {
     height: 90%;
 }
 
-header nav ul {
+header nav div {
     display: flex;
     width: 42vw;
     font-size: 29px;
 }
 
-header nav ul li {
+header nav div li {
     list-style: none;
     padding-left: 5vw;
     cursor: pointer;
 }
 
-header nav ul li a {
+header nav div li a {
     text-decoration: none;
     color: #000;
     position: relative;
 }
 
-.discort{
-
-}
+.discort {}
 
 
 
-header nav ul li:hover {
+header nav div li:hover {
     text-decoration: underline;
 }
+
 
 section {
     display: flex;
@@ -144,7 +142,7 @@ aside nav {
 .poke-card::before,
 .table-poke::before,
 .search::before,
-.Session li::before {
+.session li::before {
     content: '';
     background: black;
     border-radius: 11px;
@@ -209,18 +207,15 @@ aside nav {
     ;
 }
 
-.img-container{
+.img-container {
     border-radius: 50%;
-    box-shadow: rgba(0, 0, 0, 0.79) 6px 8px 17px;
-    width: 17vw;
+    width: 16vw;
     height: 20vh;
     display: flex;
     margin: 2rem;
+    justify-content: center;
 }
-.poke-img {
-    width: 17vw;
-    height: 23vh;
-}
+
 
 .poke-moves div div {
     border: 1px solid black;
@@ -246,7 +241,7 @@ aside nav {
 
 /* Poke Table */
 
-.Session {
+.session {
     display: grid;
     height: 7vh;
     width: 27rem;
@@ -256,16 +251,20 @@ aside nav {
 
 }
 
-.Session li {
+.session .generations {
     position: relative;
     list-style: none;
-   text-align: center;
+    text-align: center;
     font-size: 16px;
     margin: 0 2px;
     background-color: #FFF;
     border-radius: 10px;
     border: 1px solid black;
     cursor: pointer;
+}
+
+.session .generations.activo {
+    background-color: #8294C4;
 }
 
 .table-poke {
@@ -310,6 +309,44 @@ aside nav {
 footer {
     background-color: #5e6065;
     height: 30vh;
+}
+
+
+@media(max-width: 800px) {
+
+    body {
+        background-size: 150vw 173vh;
+    }
+
+    header nav div {
+        width: 42vw;
+        font-size: 19px;
+    }
+
+    header nav {
+        justify-content: flex-start;
+    }
+
+    section {
+        flex-direction: column;
+        height: 166vh;
+    }
+
+    aside {
+        width: 100vw;
+    }
+
+    .search {
+        width: 60vw;
+    }
+
+    .table-poke {
+        width: 76vw;
+    }
+
+    .img-container {
+        width: 34vw;
+    }
 }
 
 
