--- a/PokeApi2/styles.css
+++ b/PokeApi2/styles.css
@@ -54,12 +54,9 @@ header nav div li a {
 
 .discort {}
 
-
-
 header nav div li:hover {
     text-decoration: underline;
 }
-
 
 section {
     display: flex;
@@ -86,6 +83,7 @@ aside nav {
 
 
 /* Search Pokemon */
+
 
 .search {
     display: flex;
@@ -137,6 +135,7 @@ aside nav {
     display: block;
     grid-template-columns: 50% 50%;
     grid-template-rows: 8% 42% 18% 32%;
+    transition: 1s;
 }
 
 .poke-card::before,
@@ -158,6 +157,7 @@ aside nav {
     font-size: 4vh;
     grid-column: 1 / 3;
     grid-row: 1;
+    text-decoration: underline;
 }
 
 .poke-data-basic {
@@ -189,7 +189,6 @@ aside nav {
     color: #FFF;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.79) 14px 17px 1px -12px;
-    ;
 }
 
 .poke-stats div {
@@ -204,18 +203,14 @@ aside nav {
     border-radius: 4px;
     border: 1px dashed black;
     box-shadow: rgba(0, 0, 0, 0.79) 1px 11px 10px -11px;
-    ;
 }
 
 .img-container {
-    border-radius: 50%;
-    width: 16vw;
-    height: 20vh;
+    border-radius: 40%;
     display: flex;
-    margin: 2rem;
+    margin: 9px;
     justify-content: center;
 }
-
 
 .poke-moves div div {
     border: 1px solid black;
@@ -239,7 +234,9 @@ aside nav {
     border-radius: 4px;
 }
 
+
 /* Poke Table */
+
 
 .session {
     display: grid;
@@ -248,7 +245,6 @@ aside nav {
     grid-template-columns: 21% 21% 21% 21%;
     grid-auto-rows: 44%;
     grid-gap: 11% 3%;
-
 }
 
 .session .generations {
@@ -305,14 +301,13 @@ aside nav {
     box-shadow: 14px 17px 1px -12px rgba(0, 0, 0, 0.79);
 }
 
-
 footer {
     background-color: #5e6065;
     height: 30vh;
 }
 
 
-@media(max-width: 800px) {
+@media(max-width: 900px) {
 
     body {
         background-size: 150vw 173vh;
@@ -343,248 +338,4 @@ footer {
     .table-poke {
         width: 76vw;
     }
-
-    .img-container {
-        width: 34vw;
-    }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* body {
-    height: 100vh;
-    overflow-y: hidden;
-}
-
-footer {
-    display: flex;
-    justify-content: space-around;
-
-}
-
-form {
-    width: 200px;
-    margin: 20px auto;
-}
-
-input {
-    width: 100%;
-    padding: 10px;
-}
-
-.poke-card {
-    position: relative;
-    height: fit-content;
-    font-family: 'Roboto Mono', monospace;
-    max-width: 300px;
-    border-radius: 4px;
-    color: #000;
-    text-align: center;
-    padding: 10px;
-    margin: 0 auto;
-    background-color: #FFF;
-    border: 1px solid black;
-}
-
-.poke-card::before {
-    content: '';
-    background: radial-gradient(black 33%, transparent 33%);
-    background-size: 3px 3px;
-    border-radius: 4px;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    z-index: -5;
-}
-
-.name {
-    padding: 8px;
-    font-size: 30px;
-}
-
-.img-container {
-    position: relative;
-    width: 180px;
-    margin: 10px auto;
-}
-
-.poke-types,
-.poke-stats,
-.poke-moves {
-    margin-top: 20px;
-}
-
-.poke-stats div {
-    display: flex;
-    justify-content: space-between;
-    align-content: space-between;
-    padding: 5px;
-    font-size: 18px;
-}
-
-.poke-types div {
-    padding: 5px;
-    margin: 5px;
-    border-radius: 4px;
-    border: 1px dashed black;
-}
-
-.poke-img {
-    width: 180px;
-    border-radius: 50%;
-}
-
-.poke-data-basic {
-    display: flex;
-    justify-content: space-around;
-}
-
-.poke-moves div div {
-    border: 1px solid black;
-    position: relative;
-    box-shadow: 9px 14px 13px -8px rgba(0, 0, 0, 0.11);
-    border-radius: 4px;
-}
-
-.poke-moves .Habilities {
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(2, 2fr);
-    grid-auto-rows: 40px;
-    grid-gap: 13px;
-
-}
-
-
-
-
-
-
-.poke-list {
-
-    overflow-x: hidden;
-    height: 80vh;
-    position: relative;
-    border: 1px solid black;
-    border-radius: 4px;
-    font-family: 'Roboto Mono', monospace;
-    width: 420px;
-    padding: 20px;
-}
-
-.poke-list::-webkit-scrollbar {
-    width: 0;
-}
-
-.poke-list-card {
-    position: relative;
-    background-color: #FFF;
-}
-
-.poke-list-card::before {
-    content: '';
-    background: radial-gradient(black 33%, transparent 33%);
-    background-size: 3px 3px;
-    border-radius: 4px;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    z-index: -1;
-    
-}
-
-.poke {
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    border: 1px solid black;
-    margin-top: 10px;
-    border-radius: 4px;
-    height: 67px;
-}
-
-.poke-table {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
