--- a/PokeApi2/styles.css
+++ b/PokeApi2/styles.css
@@ -6,10 +6,11 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    height: 130vh;
+    /* height: 130vh; */
     background-image: url("img/poke-wallpaper.png");
     background-repeat: no-repeat;
     background-size: 100% 118vh;
+    overflow-x: initial;
 }
 
 body::-webkit-scrollbar {
@@ -301,11 +302,39 @@ aside nav {
     box-shadow: 14px 17px 1px -12px rgba(0, 0, 0, 0.79);
 }
 
-footer {
-    background-color: #5e6065;
-    height: 30vh;
+.inner-footer {
+    position: relative;
+    background-color: #83764F;
+    display: flex;
 }
 
+.inner-footer::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    background-color: #A2A378;
+    height: 1vh;
+}
+
+.inner-footer img {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 15vw;
+}
+
+.child-footer {
+    width: 26vw;
+    margin: 2rem 1rem;
+}
+
+.child-footer h3 {
+    margin-bottom: 15px;
+}
+
+.child-footer ul {
+    list-style: none;
+}
 
 @media(max-width: 900px) {
 
@@ -337,5 +366,13 @@ footer {
 
     .table-poke {
         width: 76vw;
+    }
+
+    .inner-footer {
+        flex-direction: column;
+    }
+
+    .child-footer {
+        width: 81vw;
     }
 }
