--- a/PokeApi2/styles.css
+++ b/PokeApi2/styles.css
@@ -2,6 +2,7 @@
 
 * {
     margin: 0;
+    padding: 0;
 }
 
 body {
@@ -52,8 +53,6 @@ header nav div li a {
     color: #000;
     position: relative;
 }
-
-.discort {}
 
 header nav div li:hover {
     text-decoration: underline;
@@ -261,7 +260,7 @@ aside nav {
 }
 
 .session .generations.activo {
-    background-color: #8294C4;
+    background-color: #CBF1F5;
 }
 
 .table-poke {
@@ -291,21 +290,26 @@ aside nav {
 
 .poke {
     display: grid;
-    grid-template-columns: 39% 27% 34%;
+    grid-template-columns: 59% 14% 27%;
     cursor: pointer;
     border: 1px solid black;
     margin: 14px 5px;
+    padding: 0 9px;
     border-radius: 4px;
     height: 8vh;
-    justify-items: center;
     align-items: center;
     box-shadow: 14px 17px 1px -12px rgba(0, 0, 0, 0.79);
 }
+
+
+/* footer */
 
 .inner-footer {
     position: relative;
     background-color: #83764F;
     display: flex;
+    flex-direction: column;
+    padding: 1rem;
 }
 
 .inner-footer::before {
@@ -314,6 +318,8 @@ aside nav {
     width: 100%;
     background-color: #A2A378;
     height: 1vh;
+    top: 0;
+    left: 0;
 }
 
 .inner-footer img {
@@ -323,9 +329,13 @@ aside nav {
     width: 15vw;
 }
 
+.inner-footer nav {
+    display: flex;
+}
+
 .child-footer {
     width: 26vw;
-    margin: 2rem 1rem;
+    margin: 1rem;
 }
 
 .child-footer h3 {
